# Thesis

./: README.md  nurbs_platform_1.SLDPRT  nurbs_platform_1.STL  traj_generation.py  uniform_traj_platform.csv
thesis_ws_1/src/traj_exe/: CMakeLists.txt  package.xml
thesis_ws_1/src/traj_exe/include/traj_exe/: connect.h
thesis_ws_1/src/traj_exe/launch/: ABB.launch
thesis_ws_1/src/traj_exe/src/: ex_surface01.cpt  traj_generation.py
thesis_ws_1/src/traj_exe/src/data/: platform_curve_data.csv  platform_nurb_pts.cpt  scan_traj (copy).csv  scan_traj.csv  spaced_data (copy).csv  spaced_data.csv  spline_data.csv  standard_traj.csv  surface_data.csv
thesis_ws_1/src/traj_exe/srv/: ForceReading.srv  LaserReading.srv
